# api/swagger/swagger.yaml
@@ -2,22 +2,36 @@ swagger: "2.0"
 info:
   version: "0.0.1"
   title: Viva Challenge Code
-# during dev, should point to your local machine
 host: localhost:10010
-# basePath prefixes all resource paths
 basePath: /v1
-#
 schemes:
-  # tip: remove http to make production-grade
   - http
   - https
-# format of bodies a client can send (Content-Type)
 consumes:
   - application/json
-# format of the responses to the client (Accepts)
 produces:
   - application/json
 paths:
+  /property:
+     x-swagger-router-controller: property
+     post:
+       description: create a specific property in Spotippos
+       operationId: postProperty
+       parameters:
+        - name: property
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/Property"
+       responses:
+         "200":
+           description: Success
+           schema:
+             $ref: "#/definitions/GeneralResponse"
+         default:
+           description: Error
+           schema:
+             $ref: "#/definitions/ErrorResponse"
   /property/{id}:
      x-swagger-router-controller: property
      get:
@@ -33,13 +47,16 @@ paths:
            description: Success
            schema:
              $ref: "#/definitions/GetPropertyResponse"
+         "404":
+             description: NotFound
+             schema:
+               $ref: "#/definitions/NotFoundResponse"
          default:
            description: Error
            schema:
              $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
-# complex objects have schema definitions
 definitions:
   GetPropertyResponse:
     required:
@@ -73,19 +90,55 @@ definitions:
           type: string
       squareMeters:
         type: number
+  Property:
+    required:
+      - title
+      - price
+      - description
+      - x
+      - y
+      - beds
+      - baths
+      - squareMeters
+    properties:
+      title:
+        type: string
+      price:
+        type: integer
+      x:
+        type: integer
+      y:
+        type: integer
+      beds:
+        type: integer
+      baths:
+        type: integer
+      squareMeters:
+        type: integer
+      description:
+        type: string
   GeneralResponse:
     type: object
     properties:
       success:
         type: number
         description: returns 1 if successful
-      description:
+      message:
+        type: string
+        description: a short comment
+      entityId:
         type: string
         description: a short comment
     required:
       - success
-      - description
+      - message
   ErrorResponse:
+    required:
+      - message
+    properties:
+      message:
+        type: string
+  NotFoundResponse:
     required:
       - message
     properties:
